--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/"
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "marked": "https://esm.sh/marked@13.0.1"
   }
 }
 </script>
